--- a/.github/workflows/testing_workflow_new_branch.yml
+++ b/.github/workflows/testing_workflow_new_branch.yml
@@ -1,8 +1,11 @@
 name: Auto PR from feature branch to dev
-run-name: "Auto PR on branch create"
+run-name: "Auto PR for ${{ github.ref_name }}"
 
 on:
-  create:
+  push:
+    branches:
+      - "feature/**"
+      - "feat/**"
 
 permissions:
   contents: read
@@ -13,33 +16,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Create PR from new feature branch to dev
+      - name: Auto-create PR into dev if needed
         uses: actions/github-script@v7
         with:
           script: |
-            const payload = context.payload;
-
-            // Only branches (ignore tag creation)
-            if (payload.ref_type !== 'branch') {
-              console.log(`Ref type is ${payload.ref_type}, skipping.`);
-              return;
-            }
-
-            const featureBranch = payload.ref;   // e.g. "feature/JIRA-123"
             const baseBranch = 'dev';
+            const featureBranch = context.ref.replace('refs/heads/', '');
 
-            // Optional: only act on certain naming patterns
-            const allowedPatterns = [/^feature\//i, /^feat\//i];
-            const matchesPattern = allowedPatterns.some((re) => re.test(featureBranch));
+            console.log(`Push detected on branch: ${featureBranch}`);
 
-            if (!matchesPattern) {
-              console.log(`Branch "${featureBranch}" does not match feature patterns, skipping.`);
+            // Just in case someone pushes directly to dev, skip that
+            if (featureBranch === baseBranch) {
+              console.log('Push is on dev itself, skipping.');
               return;
             }
 
-            console.log(`Attempting PR from "${featureBranch}" -> "${baseBranch}"`);
-
-            // Check that base branch exists
+            // 1. Check base branch exists
             try {
               await github.rest.repos.getBranch({
                 owner: context.repo.owner,
@@ -51,7 +43,7 @@ jobs:
               return;
             }
 
-            // Avoid duplicate PRs
+            // 2. Check if an open PR already exists from this feature branch into dev
             const { data: existingPrs } = await github.rest.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -61,13 +53,13 @@ jobs:
             });
 
             if (existingPrs.length > 0) {
-              console.log(
-                `PR already exists for ${featureBranch} -> ${baseBranch}: #${existingPrs[0].number}`
-              );
+              console.log(`Open PR already exists for ${featureBranch} -> ${baseBranch}: #${existingPrs[0].number}`);
               return;
             }
 
-            // Try to create the PR
+            console.log(`No existing PR found. Creating PR from ${featureBranch} -> ${baseBranch}`);
+
+            // 3. Try to create the PR
             try {
               const { data: pr } = await github.rest.pulls.create({
                 owner: context.repo.owner,
