--- a/.github/workflows/testing_workflow_new_branch.yml
+++ b/.github/workflows/testing_workflow_new_branch.yml
@@ -1,77 +1,173 @@
-name: Auto PR from feature branch to dev
-run-name: "Auto PR for ${{ github.ref_name }}"
+name: Auto PR: scan new feature branches into dev
 
 on:
-  push:
-    branches:
-      - "feature/**"
-      - "feat/**"
+  # Run every 30 minutes (tweak as you like)
+  schedule:
+    - cron: "*/30 * * * *"
+  # Allow manual run from Actions tab for debugging
+  workflow_dispatch:
 
 permissions:
   contents: read
   pull-requests: write
 
 jobs:
-  open-pr-to-dev:
+  scan-and-open-prs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Auto-create PR into dev if needed
+      - name: Scan branches and create PRs to dev
         uses: actions/github-script@v7
         with:
           script: |
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
             const baseBranch = 'dev';
-            const featureBranch = context.ref.replace('refs/heads/', '');
 
-            console.log(`Push detected on branch: ${featureBranch}`);
+            // Consider a branch "new" if its latest commit is within this many minutes
+            const MAX_AGE_MINUTES = 60; // tweak this
 
-            // Just in case someone pushes directly to dev, skip that
-            if (featureBranch === baseBranch) {
-              console.log('Push is on dev itself, skipping.');
-              return;
+            // Adjust to match your feature branch naming convention
+            const branchPatterns = [
+              /^feature\//i,
+              /^feat\//i,
+              // add more if needed, e.g. /^FLS-/i
+            ];
+
+            function isFeatureBranch(name) {
+              return branchPatterns.some(re => re.test(name));
             }
 
-            // 1. Check base branch exists
-            try {
-              await github.rest.repos.getBranch({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                branch: baseBranch,
+            // Helper to compute age in minutes
+            function ageInMinutes(isoDate) {
+              const now = new Date();
+              const t = new Date(isoDate);
+              return (now - t) / (1000 * 60);
+            }
+
+            // 1. List all branches (paged)
+            const allBranches = [];
+            let page = 1;
+            const per_page = 100;
+
+            while (true) {
+              const { data } = await github.rest.repos.listBranches({
+                owner,
+                repo,
+                per_page,
+                page,
               });
-            } catch (e) {
-              console.log(`Base branch "${baseBranch}" not found. Error: ${e.message}`);
+              if (!data.length) break;
+              allBranches.push(...data);
+              if (data.length < per_page) break;
+              page += 1;
+            }
+
+            console.log(`Found ${allBranches.length} branches total`);
+
+            // 2. Filter candidate feature branches (by name, not dev, not main)
+            const candidateBranches = allBranches
+              .map(b => b.name)
+              .filter(name =>
+                isFeatureBranch(name) &&
+                name !== baseBranch &&
+                name !== 'main'
+              );
+
+            if (!candidateBranches.length) {
+              console.log('No feature-like branches found, exiting.');
               return;
             }
 
-            // 2. Check if an open PR already exists from this feature branch into dev
-            const { data: existingPrs } = await github.rest.pulls.list({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              head: `${context.repo.owner}:${featureBranch}`,
-              base: baseBranch,
-              state: 'open',
-            });
+            console.log('Candidate feature branches:', candidateBranches);
 
-            if (existingPrs.length > 0) {
-              console.log(`Open PR already exists for ${featureBranch} -> ${baseBranch}: #${existingPrs[0].number}`);
-              return;
-            }
+            // 3. For each candidate, check:
+            //    - Is it "new" based on last commit age?
+            //    - Does a PR (open or closed) already exist from this branch into dev?
+            for (const branchName of candidateBranches) {
+              // 3a. Get branch to find head commit SHA
+              let branch;
+              try {
+                const { data } = await github.rest.repos.getBranch({
+                  owner,
+                  repo,
+                  branch: branchName,
+                });
+                branch = data;
+              } catch (e) {
+                console.log(`Skipping ${branchName}, could not fetch branch: ${e.message}`);
+                continue;
+              }
 
-            console.log(`No existing PR found. Creating PR from ${featureBranch} -> ${baseBranch}`);
+              const sha = branch.commit && branch.commit.sha;
+              if (!sha) {
+                console.log(`Skipping ${branchName}, no commit SHA found`);
+                continue;
+              }
 
-            // 3. Try to create the PR
-            try {
-              const { data: pr } = await github.rest.pulls.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: `Auto PR: ${featureBranch} → ${baseBranch}`,
-                head: featureBranch,
+              // 3b. Get head commit details and check age
+              let commit;
+              try {
+                const { data } = await github.rest.repos.getCommit({
+                  owner,
+                  repo,
+                  ref: sha,
+                });
+                commit = data;
+              } catch (e) {
+                console.log(`Skipping ${branchName}, could not fetch commit: ${e.message}`);
+                continue;
+              }
+
+              const commitDate =
+                (commit.commit && commit.commit.committer && commit.commit.committer.date) ||
+                (commit.commit && commit.commit.author && commit.commit.author.date);
+
+              if (!commitDate) {
+                console.log(`Skipping ${branchName}, no commit date found`);
+                continue;
+              }
+
+              const age = ageInMinutes(commitDate);
+              console.log(`Branch ${branchName} latest commit age: ${age.toFixed(1)} minutes`);
+
+              if (age > MAX_AGE_MINUTES) {
+                console.log(`Skipping ${branchName}, older than ${MAX_AGE_MINUTES} minutes`);
+                continue;
+              }
+
+              // 3c. Check if ANY PR (open or closed) already exists from this branch into dev
+              const { data: existingPrs } = await github.rest.pulls.list({
+                owner,
+                repo,
+                head: `${owner}:${branchName}`,
                 base: baseBranch,
-                body: `This pull request was automatically created for branch \`${featureBranch}\` targeting \`${baseBranch}\`.`,
+                state: 'all',   // open + closed
               });
 
-              console.log(`PR created: #${pr.number}`);
-            } catch (error) {
-              console.log('Failed to create PR. Full error below:');
-              console.log(JSON.stringify(error, null, 2));
+              if (existingPrs.length > 0) {
+                console.log(
+                  `Skipping ${branchName}, PR already exists into ${baseBranch} (e.g. #${existingPrs[0].number})`
+                );
+                continue;
+              }
+
+              // 4. Create PR
+              console.log(`Creating PR for ${branchName} -> ${baseBranch}`);
+
+              try {
+                const { data: pr } = await github.rest.pulls.create({
+                  owner,
+                  repo,
+                  head: branchName,
+                  base: baseBranch,
+                  title: `Auto PR: ${branchName} → ${baseBranch}`,
+                  body: `Auto-created PR for branch \`${branchName}\` targeting \`${baseBranch}\`.`,
+                });
+
+                console.log(`✅ Created PR #${pr.number} for ${branchName}`);
+              } catch (error) {
+                console.log(`⚠️ Failed to create PR for ${branchName}:`);
+                console.log(JSON.stringify(error, null, 2));
+              }
             }
