--- a/.github/workflows/apex-test-coverage.yml
+++ b/.github/workflows/apex-test-coverage.yml
@@ -1,41 +1,41 @@
-name: Apex coverage on merge to release-branch
+name: Apex coverage on PR to release-branch
 
 on:
   pull_request:
-    types: [closed]
+    types: [opened, reopened, synchronize]
     branches:
       - release-branch
 
 jobs:
   apex-coverage:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
-    env:
-      MERGE_SHA: ${{ github.event.pull_request.merge_commit_sha }}
-
     steps:
-
-      - name: Checkout merged commit
+      - name: Checkout PR head
         uses: actions/checkout@v4
         with:
-          ref: ${{ env.MERGE_SHA }}
+          # this is the feature branch commit in the PR
+          ref: ${{ github.event.pull_request.head.sha }}
 
-      # INSTALL SALESFORCE CLI HERE
       - name: Install Salesforce CLI
         run: |
           npm install --global @salesforce/cli
           sf version
 
-      # AUTH STEP GOES HERE in real world
-      # (depends on your org setup — JWT is likely)
+      # AUTH STEP GOES HERE IF NEEDED
       # - name: Authenticate to Salesforce
       #   run: ...
-      
+
       - name: Build Apex test class list
         run: |
           APEX_DIR="force-app/main/default/classes"
           TEST_CLASSES=""
+
+          if [ ! -d "$APEX_DIR" ]; then
+            echo "Apex directory '$APEX_DIR' not found. Nothing to test."
+            echo "TEST_CLASSES=" >> $GITHUB_ENV
+            exit 0
+          fi
 
           find "$APEX_DIR" -maxdepth 1 \( -name '*Test.cls' -o -name '*-test.cls' \) | while read -r test_file; do
             class_name=$(grep -m1 -Po 'class\s+\K\w+' "$test_file" || true)
@@ -49,6 +49,7 @@ jobs:
             fi
           done
 
+          echo "Resolved Apex test classes: $TEST_CLASSES"
           echo "TEST_CLASSES=$TEST_CLASSES" >> $GITHUB_ENV
 
       - name: Run Apex tests and collect coverage
